--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,42 @@
 <!DOCTYPE html>
 <html ng-app -"todoList">
 <head>
+  <title>To-do App</title>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <script src= "//ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>
   <script src="core.js"></script>
 </head>
 
 <body ng-controller="mainController">
-  <h1>To-do list</h1>
-  <h1>{{ todos.length }}</h1>
-  <div class="checkbox" ng-repeat="todo in todos">
-    <label>
-      <input type="checkbox"> {{ todo.text }}
-    </label>
+  <div class="container">
+  <!-- TODO COUNT -->
+  <div class="jumbotron text-center">
+    <h1>To-do list <span class = "label label-info">{{ todos.length }}</span></h1>
+  </div>
+
+  <!--TODO LIST -->
+  <div id="todo-list" class ="row">
+    <div class="col-sm-4 col-sm-offset-4">    
+      <div class="checkbox" ng-repeat="todo in todos">
+      <label>
+        <input type="checkbox" ng-click="deleteTodo(todo._id)"> {{ todo.text }}
+      </label>
+      </div>
+    </div>
+  </div>
+
+  <!--FORM-->
+  <div id="todo-form" class="row">
+    <div class="col-sm-8 col-sm-offset-2 text-center">
+      <form>
+        <div class ="form-group">
+          <input type="text" class="form-control input-lg text-center" placeholder="Type to-do" ng-model="formData.text">
+        </div>
+        <button type="submit" class="btn btn-primary btn-lg" ng-click="createTodo()">Add</button>
+      </form>
+    </div>
+  </div>
   </div>
 </body>
 </html>
